resources/hass/deploy.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: hass
spec:
  serviceName: hass
  selector:
    matchLabels:
      app: hass
  template:
    metadata:
      annotations:
        k8s.v1.cni.cncf.io/networks: macvlan-conf
      labels:
        app: hass
    spec:
      containers:
        - name: hass
          image: homeassistant/home-assistant:latest
          ports:
            - containerPort: 8123
          volumeMounts:
            - name: config
              mountPath: /config
  volumeClaimTemplates:
    - metadata:
        name: config
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: "nfs-csi"
        resources:
          requests:
            storage: 1G
