resources/hass/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: hass2
spec:
  ports:
    - name: http
      port: 8123
  selector:
    app: hass
