resources/hass/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hass2
  annotations:
    cert-manager.io/cluster-issuer: addem-se-letsencrypt
spec:
  ingressClassName: unauthenticated
  tls:
    - hosts:
        - hass2.addem.se
      secretName: hass2-cert
  rules:
    - host: hass2.addem.se
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hass2
                port:
                  number: 8123
