resources/hass/redirect.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: hass
    annotations:
        cert-manager.io/cluster-issuer: addem-se-letsencrypt
        ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
    tls:
        - hosts:
            - hass.addem.se
          secretName: hass-cert
    rules:
        - host: hass.addem.se
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: hass
                            port:
                                name: http
---
apiVersion: v1
kind: Service
metadata:
  name: hass
spec:
  type: ExternalName
  externalName: 192.168.1.9
  ports:
      - name: http
        port: 8123
